@@ -6,6 +6,7 @@ Revision history for Perl module Math::Prime::Util
 
     - random_semiprime                random n-bit semiprime (even split)
     - random_unrestricted_semiprime   random n-bit semiprime
+    - forderange { ... } n            derangements iterator
 
     [FUNCTIONALITY AND PERFORMANCE]
 
